# svSlicer

./: CMakeLists.txt
src/: main.cpp
